# AERA-Project

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
aera-blockchain/: .gitignore  Cargo.toml  README.md
aera-blockchain/src/: lib.rs  main.rs  manager.rs  mining.rs  tauri_bridge.rs  types.rs
aera-blockchain/src/api/: mod.rs
aera-blockchain/src/bridge/: deposit_store.rs  eth_listener.rs  mod.rs  tron_client.rs
aera-blockchain/src/consensus/: mod.rs  pos.rs
aera-blockchain/src/network/: mod.rs
aera-blockchain/src/state/: genesis.rs  mod.rs  storage.rs
aera-blockchain/src/wallet/: keystore.rs  mod.rs
aera-miner/: .gitignore  Cargo.toml  README.md  config.toml
aera-miner/docs/: overview.md
aera-miner/schemas/: config.schema.json  status.schema.json
aera-miner/src/: config.rs  main.rs  miner.rs  state.rs
aera-miner/src/wallet/: keystore.rs  mod.rs
aera-wallet/: .gitignore  GETTING_STARTED.md  README.md  index.html  package-lock.json  package.json
aera-wallet/docs/: API_TX_SEND.md
aera-wallet/src/: main.ts  styles.css  utils.test.ts  utils.ts
aera-wallet/src-tauri/: Cargo.toml  build.cmd  tauri.conf.json
aera-wallet/src-tauri/icons/: icon.icns
aera-wallet/src-tauri/src/: lib.rs  main.rs
